# iceberg-intro-lessons

./: .docker-compose.yml.swp  .gitignore  .kafka-docker-composer.yaml.swp  .pylintrc  Dockerfile.jobmanager  Makefile  dc-build-test.yaml  docker-compose.yml  dremio-iceberg-docker-compose.yml  kafka-docker-composer.yaml  kafka-docker-composer.yaml.ori  kafka-flink-docker-compose.yaml  local-flink-conf.yaml  setup.cfg  workdir
etc/: notes.txt
infra/: claude_main.tf
java_src/: Makefile
java_src/flink-app/: .gitignore  Makefile  dependency-reduced-pom.xml  pom.xml
java_src/flink-app/src/main/java/com/spycloud/: FlinkDataProducer.java  FlinkKafkaTopicRedirector.java  FlinkPrintKafkaTopic.java  FlinkPrintKafkaTopicStdOut.java  FlinkWriteToTopicSensorData.java  FlinkWriteToTopicStdOut.java
java_src/flink-app/src/main/java/com/spycloud/demo01/: FlinkKafkaTopicRedirector.java  FlinkPrintKafkaTopicStdOut.java  FlinkWriteToTopicSensorData.java  (+1 more)
java_src/flink-app/src/test/java/com/spycloud/: AppTest.java
notebooks/: test.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
python_src/: .pylintrc  setup.cfg
python_src/flink_basics/: Makefile  pyproject.toml
python_src/flink_basics/flink_basics/: config.py  flink_consumer.py  flink_ex2.py  flink_producer.py  flink_stdout.py  kafka_flink_example.py  my_word_count.py
python_src/flink_local/: pyproject.toml
python_src/kafka_test/: Makefile  conf_kafka.py  kafka_consumer.py  kafka_producer.py  pyproject.toml
python_src/lessons/: pyproject.toml
python_src/lessons/lessons/: lesson02.py
(+8 files in other folders)
