[tool.poetry]
name = "flink_local"
version = "0.1.0"
description = ""
authors = ["Halil Agin <halil.agin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.12"
pyyaml = "^6.0.2"
jupyter = "^1.1.1"
apache-flink = "1.20.0"
faker = "^33.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
